# rust-comp

./: .dir-locals.el  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  optimizing.md  verify
git/hooks/: pre-commit  pre-push
rust-comp-core/: Cargo.toml
rust-comp-core/src/: diagnostic.rs  lib.rs
rust-comp-diagnostic/: Cargo.toml
rust-comp-diagnostic/src/: lib.rs
rust-comp-front/: Cargo.toml
rust-comp-front/src/: ast.rs  lib.rs  parse_to_syntax.rs  token.rs
rust-comp-front/src/lex/: mod.rs  tagged_iter.rs
rust-comp-front/src/parse/: block.rs  combinator.rs  enum_.rs  error.rs  expression.rs  fn_.rs  match_.rs  mod.rs  parse.rs  parser.rs  path.rs  pattern.rs  statement.rs  struct_.rs  (+5 more)
rust-comp-frontend/: Cargo.toml
rust-comp-frontend/src/: ast.rs  lib.rs  read_file.rs  token.rs
rust-comp-middle/: Cargo.toml
rust-comp-middle/src/: lib.rs
rust-comp-opt/: Cargo.toml
rust-comp-opt/src/: lib.rs
rust-comp-run/: Cargo.toml
rust-comp-run/src/: lib.rs
rust-comp-syntax/: Cargo.toml
rust-comp-syntax-to-middle/: Cargo.toml
rust-comp-syntax-to-middle/src/: lib.rs
rust-comp-syntax/src/: lib.rs  tree.rs
src/: args.rs  ast.rs  diagnostic.rs  lex.rs  lexer.rs  main.rs  opt.rs  parse.rs  pos.rs  read_file.rs  run.rs  tagged_iter.rs  token.rs
src/arena/: allocator.rs  mod.rs
src/lex/: mod.rs  tagged_iter.rs
src/parse/: block.rs  body.rs  combinator.rs  error.rs  expression.rs  fn_.rs  general.rs  mod.rs  parse.rs  parser.rs  statement.rs  test.rs  top_level.rs  type_.rs
system-tests/: ex2.rs  ex3.rs  ex4.rs
(+27 files in other folders)
