[package]
name = "rust-comp"
version = "0.1.0"
authors = ["Chris Gregory <czipperz@gmail.com>"]
edition = "2018"

[workspace]
members = ["rust-comp-run", "rust-comp-core", "rust-comp-front", "rust-comp-syntax", "rust-comp-opt"]
exclude = ["target/report"]

[dependencies]
rust-comp-run = { path = "rust-comp-run" }
rust-comp-opt = { path = "rust-comp-opt" }
